--- a/VenueSync/VenueSync.csproj
+++ b/VenueSync/VenueSync.csproj
@@ -9,5 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OtterGui\OtterGui.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="PusherClient" Version="2.3.0-beta" />
   </ItemGroup>
 </Project>
