state management and house detection / comparison

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,9 +12,9 @@ dotnet_naming_rule.types_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.types_should_be_pascal_case.symbols = types
 dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
-dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
-dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
+#dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
+#dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
+#dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
 # Symbol specifications
 
@@ -71,7 +71,7 @@ csharp_indent_labels = one_less_than_current
 csharp_using_directive_placement = outside_namespace:silent
 csharp_prefer_simple_using_statement = true:suggestion
 csharp_prefer_braces = true:silent
-csharp_style_namespace_declarations = block_scoped:silent
+csharp_style_namespace_declarations = file_scoped:silent
 csharp_style_prefer_method_group_conversion = true:silent
 csharp_style_prefer_top_level_statements = true:silent
 csharp_style_expression_bodied_methods = false:silent
@@ -118,3 +118,5 @@ dotnet_diagnostic.S3267.severity = silent
 
 # MA0048: File name must match type name
 dotnet_diagnostic.MA0048.severity = silent
+
+resharper_inconsistent_naming_highlighting = non
