adding mannequin checks

--- a/VenueSync/VenueSync.csproj
+++ b/VenueSync/VenueSync.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OtterGui\OtterGui.csproj" />
     <ProjectReference Include="..\Penumbra.Api\Penumbra.Api.csproj" />
+    <ProjectReference Include="..\Penumbra.GameData\Penumbra.GameData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
